2000-12-15  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CXXCPP, AC_PROG_CPP): Require AC_PROG_CXX/CC.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (GNU Fortran 77): G77 is a `yes'/`' var.
	Reported by Ezra Peisach.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (GNU Fortran 77): s/g77/G77/.
	Reported by Ezra Peisach.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* man/Makefile.am (.x.1): Fix to work properly with
	builddir != srcdir.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_LANG(C), AC_LANG(C++), AC_LANG(Fortran 77))
	(AC_PROG_CPP, AC_PROG_CXXCPP, AC_PROG_GCC_TRADITIONAL)
	(_AC_PROG_CC_G, AC_PROG_CC_C_O, _AC_PROG_CXX_G, AC_PROG_CC_STDC):
	Don't use `${CC-cc}' since now the AC_REQUIRE machinery guarantees
	that $CC is defined.  And if not, it's a bug which must be
	observable.
	* acspecific.m4 (AC_SYS_LARGEFILE): Likewise.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_PREPROC_IFELSE): Use ac_status as set by
	AC_TRY_EVAL.
	(_AC_COMPILE_IFELSE, _AC_LINK_IFELSE, _AC_RUN_IFELSE): More alike,
	using AS_IFELSE, and systematically AC_TRY_COMMAND when testing
	something (for the logs).

2000-12-15  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_PROG_PREPROC_WORKS): Use _AC_PREPROC_IFELSE.
	* acgeneral.m4 (_AC_TRY_CPP): Its last use was that above, so
	inline it into...
	(_AC_PREPROC_IFELSE): here.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_INIT): Forget about `-n'.
	Adjust so that `./testsuite -h 1 2' explains only tests 1 & 2.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_EVAL): New.
	(AC_TRY_EVAL, AC_TRY_COMMAND): Use it.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_PREPROC_IFELSE, AC_PREPROC_IFELSE): New.
	(AC_TRY_CPP): Use AC_PREPROC_IFELSE.
	(AC_CHECK_MEMBER, AC_CHECK_DECL, _AC_CHECK_TYPE_NEW): Quote
	properly.
	* acheaders.m4 (AC_CHECK_HEADER): Quote properly, use
	AC_PREPROC_IFELSE.